--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/screen.js"></script>
   </head>
   <body id="page-top">
-    <nav id="Bmenu" class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">MIOT Mathieu</span>
         <span class="d-none d-lg-block">
