--- a/index.html
+++ b/index.html
@@ -172,6 +172,98 @@
               </div>
               <canvas id="screen" onclick="ScrollMethod()">
               </canvas>
+              <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+              <!-- Created with Inkscape (http://www.inkscape.org/) -->
+              <svg
+                 xmlns:dc="http://purl.org/dc/elements/1.1/"
+                 xmlns:cc="http://creativecommons.org/ns#"
+                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="http://www.w3.org/2000/svg"
+                 xmlns="http://www.w3.org/2000/svg"
+                 xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                 xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                 width="37mm"
+                 height="38mm"
+                 viewBox="0 0 37 38"
+                 version="1.1"
+                 id="svg8"
+                 sodipodi:docname="triangle.svg"
+                 inkscape:version="0.92.2 (5c3e80d, 2017-08-06)">
+                <defs
+                   id="defs2" />
+                <sodipodi:namedview
+                   id="base"
+                   pagecolor="#ffffff"
+                   bordercolor="#666666"
+                   borderopacity="1.0"
+                   inkscape:pageopacity="0.0"
+                   inkscape:pageshadow="2"
+                   inkscape:zoom="3.959798"
+                   inkscape:cx="43.558"
+                   inkscape:cy="1023.1095"
+                   inkscape:document-units="mm"
+                   inkscape:current-layer="layer1"
+                   showgrid="false"
+                   inkscape:window-width="1920"
+                   inkscape:window-height="1017"
+                   inkscape:window-x="-8"
+                   inkscape:window-y="-8"
+                   inkscape:window-maximized="1"
+                   showguides="false" />
+                <metadata
+                   id="metadata5">
+                  <rdf:RDF>
+                    <cc:Work
+                       rdf:about="">
+                      <dc:format>image/svg+xml</dc:format>
+                      <dc:type
+                         rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
+                    </cc:Work>
+                  </rdf:RDF>
+                </metadata>
+                <g
+                   inkscape:label="Calque 1"
+                   inkscape:groupmode="layer"
+                   id="layer1">
+                  <path
+                     style="fill:blue;fill-opacity:1;stroke:#000000;stroke-width:0.03511925px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                     d="m 18.821314,0.20669886 4.023866,7.39765564 -8.04773,0.0031 z"
+                     id="UP"
+                     inkscape:connector-curvature="0"
+                     sodipodi:nodetypes="cccc"
+                     onclick="move(this)"
+
+                  />
+
+                  <path
+                     style="fill:yellow;fill-opacity:1;stroke:#000000;stroke-width:0.03511925px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                     d="m 36.587856,17.979093 -7.553923,3.940623 -0.0034,-7.881246 z"
+                     id="RIGHT"
+                     inkscape:connector-curvature="0"
+                     sodipodi:nodetypes="cccc"
+                     onclick="move(this)"
+
+                     />
+                  <path
+                     style="fill:red;fill-opacity:1;stroke:#000000;stroke-width:0.03511925px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                     d="m 0.49546343,17.979089 7.55388377,3.940627 0.0034,-7.881246 z"
+                     id="LEFT"
+                     inkscape:connector-curvature="0"
+                     sodipodi:nodetypes="cccc"
+                     onclick="move(this)"
+
+                  />
+                  <path
+                     style="fill:green;fill-opacity:1;stroke:#000000;stroke-width:0.03511925px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+                     d="m 18.821568,36.751735 -4.023867,-7.39766 8.047731,-0.0031 z"
+                     id="DOWN"
+                     inkscape:connector-curvature="0"
+                     sodipodi:nodetypes="cccc"
+                     onclick="move(this)"
+                 />
+                </g>
+              </svg>
+
             </li>
           </ul>
         </div>
