--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="subheading mb-5">
             <a href="mailto:mathieu.miot@gmail.com">mathieu.miot@gmail.com</a>
           </div>
-            <p class="lead mb-5">Développeur Web débutant, je débute, mais ça va saigner !
+            <p class="lead mb-5">Développeur Web débutant, ayant soif d'appendre et de progresser.
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
@@ -69,10 +69,29 @@
           </div>
         </div>
       </section>
-
       <hr class="m-0">
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
+          <h2 class="mb-5">Mes études :</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">LA MANU SOISSONS</h3>
+              <div class="subheading mb-3">Formation FRONT END</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Septembre-Octobre 2018</span>
+            </div>
+          </div>
+          <h2 class="mb-5">Mes études :</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">LA MANU SOISSONS </h3>
+              <div class="subheading mb-3">formation .NET</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Décembre 2018-Mars 2019</span>
+            </div>
+          </div>
           <h2 class="mb-5">Mes études :</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -132,7 +151,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Des passions ?</h2>
           <p>Bien entendu, l'informatique me passionne (trop évident, je l'admet), mais sorti de l'électronique et de l'informatique embarqué, j'aime bien les mangas, les classiques de l'héroique fantasy comme le seigneur des anneaux, le métal, le sport électronique.</p>
-          <p class="mb-0">Sinon, il m'arrive de sortir de mon antre de temps en temps et de m'amuser en soirée avec mes potes.
+          <p class="mb-0">Sinon, il m'arrive de sortir de temps en temps et de m'amuser en soirée avec mes amis.
         </div>
       </section>
       <hr class="m-0">
@@ -141,7 +160,7 @@
           <h2 class="mb-5">Expérience</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Ouvrier polyvalent</h3>
+              <h3 class="mb-0">Ouvrier</h3>
               <div class="subheading mb-3">association A.R.B.R.E.S BRASLES</div>
               <p>Mon travail était très variable : entretien et nétoyage d'espaces verts, installation d'infrastructures type scène de concerts, ou simple réparation de meubles.</p>
               </div>
@@ -151,9 +170,9 @@
           </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">ouvrier manutentionnaire intérimaire</h3>
+              <h3 class="mb-0">Ouvrier</h3>
               <div class="subheading mb-3">E.I.F.A.G.E construction</div>
-              <p>comme son nom l'indique, j'ai fait beaucoup de manutention, un peu d'installation également, et de l'assistance coté S.A.V  à domicile pour de la réparation de meubles mal installé par les équipes précédentes...</p>
+              <p>j'ai fait beaucoup de manutention,d'installation d'infrastructures sur chantiers, et de l'assistance S.A.V à domicile.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">juin 2011 - Août 2011</span>
