--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Ouvrier</h3>
-              <div class="subheading mb-3">E.I.F.A.G.E construction</div>
+              <div class="subheading mb-3">E.I.F.F.A.G.E construction</div>
               <p>j'ai fait beaucoup de manutention,d'installation d'infrastructures sur chantiers, et de l'assistance S.A.V à domicile.</p>
             </div>
             <div class="resume-date text-md-right">
