--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="my-auto">
         <h2 class="mb-5 text-primary">Des passions ?</h2>
         <p>Bien entendu, l'informatique me passionne (trop évident, je l'admet), mais sorti de l'électronique et de
-          l'informatique embarqué, j'aime bien les mangas, les classiques de l'héroique fantasy comme le seigneur des
+          l'informatique embarqué, j'aime bien les mangas, les classiques de l'héroic fantasy comme le seigneur des
           anneaux, le métal, le sport électronique.</p>
         <p class="mb-0">Sinon, il m'arrive de sortir de temps en temps et de m'amuser en soirée avec mes amis.
       </div>
@@ -184,7 +184,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <h3>snake en javascript:</h3>
-            <div class="subheading mb-3">clickez sur l'écran de jeu pour vérouiller/déverouiller la page.
+            <div class="subheading mb-3">cliquez sur l'écran de jeu pour vérouiller/déverouiller le scrolling.
             </div>
             <canvas id="screen" onclick="ScrollMethod()">
             </canvas>
