--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body id="page-top" class="stop-scrolling" >
+  <div id="img"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" >
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">MIOT Mathieu</span>
