--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         <h2 class="mb-5 text-primary">Mes projets</h2>
         <ul class="fa-ul mb-0">
           <li>
+            <h3>Impréssion de tickets de cinéma (à la volée, sans servers ). </h3>
+            <p>https://codepen.io/Thurzas/pen/BazBpav</p>
+          </li>
+          <li>
             <h3>snake en javascript:</h3>
             <canvas id="screen">
             </canvas>
