--- a/index.html
+++ b/index.html
@@ -182,12 +182,8 @@
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex flex-column"  data-aos="fade-left" data-aos-mirror="true" id="projets">
       <div class="my-auto">
-        <h2 class="mb-5 text-primary">Mes projets</h2>
+        <h2 class="mb-5 text-primary">Mes projets : Snake</h2>
         <ul class="fa-ul mb-0">
-          <li>
-            <h3>Impréssion de tickets de cinéma (à la volée, sans servers ). </h3>
-            <p>https://codepen.io/Thurzas/pen/BazBpav</p>
-          </li>
           <li>
             <h3>snake en javascript:</h3>
             <canvas id="screen">
@@ -233,6 +229,17 @@
         </ul>
       </div>
     </section>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column"  data-aos="fade-left" data-aos-mirror="true" id="projets2">
+      <div class="my-auto">
+        <h2 class="mb-5 text-primary">Mes projets : Tickets de cinéma customizable</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <h3>Impréssion de tickets de cinéma (à la volée, sans servers ). </h3>
+            <p>https://codepen.io/Thurzas/pen/BazBpav</p>
+          </li>
+        </ul>
+        </section>
+      </div>
   </div>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
