--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Mon expérience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projets">Projets</a>
+          <a class="nav-link js-scroll-trigger" href="#projets">Projets : Snake en javascript</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projets2">Projets : Tickets de cinéma customizables</a>
         </li>
       </ul>
     </div>
@@ -185,7 +188,7 @@
         <h2 class="mb-5 text-primary">Mes projets : Snake</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <h3>snake en javascript:</h3>
+            <h3>Snake en javascript:</h3>
             <canvas id="screen">
             </canvas>
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -224,7 +227,6 @@
                   inkscape:connector-curvature="0" sodipodi:nodetypes="cccc" onclick="move(this)" />
               </g>
             </svg>
-
           </li>
         </ul>
       </div>
