--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
         <h2 class="mb-5 text-primary">Mes projets : Tickets de cinéma customizable</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <h3>Impréssion de tickets de cinéma (à la volée, sans servers ). </h3>
-            <p>https://codepen.io/Thurzas/pen/BazBpav</p>
+            <h3>Impréssion de tickets de cinéma (à la volée, sans serveurs ). </h3>
+            <a>https://codepen.io/Thurzas/pen/BazBpav</a>
           </li>
         </ul>
         </section>
