--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <h2 class="mb-5 text-primary">Mes projets : Tickets de cinéma customizable</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <a src ="https://codepen.io/Thurzas/pen/BazBpav"> 
+            <a href="https://codepen.io/Thurzas/pen/BazBpav"> 
               <h3>tickets de cinéma à la volée (sans serveurs).</h3>
             </a>
           </li>
