--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="subheading mb-5">
           <a href="mailto:mathieu.miot@gmail.com">mathieu.miot@gmail.com</a>
         </div>
+        <img class="img-fluid img-profile mx-auto mb-2" src="img/drone.jpg" alt="">
         <p class="lead mb-5">Développeur Web.
           <div class="social-icons">
             <a href="#">
