--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">MIOT Mathieu</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/drone.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/photo.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -66,7 +66,6 @@
         <div class="subheading mb-5">
           <a href="mailto:mathieu.miot@gmail.com">mathieu.miot@gmail.com</a>
         </div>
-        <img class="img-fluid img-profile mx-auto mb-2" src="img/photo.png" width="20%"alt="">
         <p class="lead mb-5">Développeur Web.
           <div class="social-icons">
             <a href="#">
