quelques changements pour postuler à un poste cette année

--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
   <script src="js/screen.js"></script>
 </head>
 
-<body id="page-top" class="stop-scrolling" >
+<body id="page-top" class="stop-scrolling bg-image"
+     style="background-image: url('img/ComfyUI_temp_yonnx_00019_.png');
+            height: 100vh">
   <div id="img"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" >
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">MIOT Mathieu</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/photo.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/drone.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -50,7 +52,7 @@
           <a class="nav-link js-scroll-trigger" href="#projets">Projets : Snake en javascript</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projets2">Projets : Tickets de cinéma customizables</a>
+          <a class="nav-link js-scroll-trigger" href="#projets2">Projets : Tickets de cinéma personalisable</a>
         </li>
       </ul>
     </div>
@@ -87,6 +89,13 @@
             <p class="subheading mb-3">Formation FRONT END</p>
           </div>
           <p class="resume-date text-md-right text-primary">Septembre - Octobre 2018</p>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Opus Formation</h3>
+            <p class="subheading mb-3">Formation HACCP / Stage en cuisine Burger King Thillois</p>
+          </div>
+          <p class="resume-date text-md-right text-primary">Novembre 2023 - Janvier 2024</p>
         </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -148,16 +157,33 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" data-aos="fade-left" data-aos-mirror="true" id="interests">
       <div class="my-auto">
         <h2 class="mb-5 text-primary">Des passions ?</h2>
-        <p>Bien entendu, l'informatique me passionne (trop évident, je l'admet), mais sorti de l'électronique et de
-          l'informatique embarqué, j'aime bien les mangas, les classiques de l'héroic fantasy comme le seigneur des
-          anneaux, le métal, le sport électronique.</p>
-        <p class="mb-0">Sinon, il m'arrive de sortir de temps en temps et de m'amuser en soirée avec mes amis.
+        <p>L'informatique, l'intélligence artificiel, je me documente souvent sur le sujet, et j'ai découvert Stable Diffusion comme ceci, il est courament utilisé avec une interface web pour déssiner à la volée des images généré par ordinateur.
+        </p>
+        <p> cet en soi un super outil de génération d'image, avec de nombreux modèles de déssin disponible, et surtout, il est open source avec une communauté à l'appuie. (l'image en arrière plan à été fait avec)</p>
+        <p class="mb-0">Accesoirement, je me sens plutôt en confiance et détendu en cuisine, ma patisserie préferée est le roulée à la pomme, que je fait maison avec une crème patissière à la vanille.
       </div>
     </section>
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex flex-column"  data-aos="fade-left" data-aos-mirror="true" id="experience">
       <div class="my-auto">
         <h2 class="mb-5 text-primary">Expérience</h2>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Equipier polyvalent en restauration</h3>
+            <div class="subheading mb-3">restaurant Burger King Château Thierry</div>
+            <ul>
+              <li>Plonge.</li>
+              <li>Entretien du matériel de cuisine.</li>
+              <li>Préparation et cuisson des ingrédients.</li>
+              <li>Assemblage des plats dans le respect des normes de sécurité d'hygiènes.</li>
+              <li>Rangement de la chambre froide en respectant les Dates limites de consommation.
+            </ul>
+            <p>Plonge, entretien du matériel de cuisine, préparation et cuisson des ingrédients, assemblage des plats dans le respect des normes de sécurité d'hygiènes.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Janvier 2023 - Juillet 2023</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Ouvrier</h3>
@@ -236,7 +262,7 @@
         <h2 class="mb-5 text-primary">Mes projets : Tickets de cinéma customizable</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <a href="https://codepen.io/Thurzas/pen/BazBpav"> 
+            <a href="https://codepen.io/Thurzas/pen/BazBpav">
               <h3>tickets de cinéma à la volée (sans serveurs).</h3>
             </a>
           </li>
