quelques changements pour postuler à un poste cette année

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <script src="js/screen.js"></script>
 </head>
 
-<body id="page-top" class="stop-scrolling bg-image"
-     style="background-image: url('img/ComfyUI_temp_yonnx_00019_.png');
-            height: 100vh">
+<body id="page-top" class="stop-scrolling">
   <div id="img"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" >
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
