--- a/index.html
+++ b/index.html
@@ -155,11 +155,37 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" data-aos="fade-left" data-aos-mirror="true" id="interests">
       <div class="my-auto">
         <h2 class="mb-5 text-primary">Des passions ?</h2>
-        <p>L'informatique, l'intélligence artificiel, je me documente souvent sur le sujet, et j'ai découvert Stable Diffusion comme ceci, il est courament utilisé avec une interface web pour déssiner à la volée des images généré par ordinateur.
+        <p>L'informatique, l'intelligence artificiel, je me documente souvent sur le sujet, et j'ai découvert Stable Diffusion, il est courament utilisé avec une interface web pour produire des images.
         </p>
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner w-50">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img\ComfyUI_temp_qkkcg_00012_1.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img\ComfyUI_temp_ukkks_00027_.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img\ComfyUI_temp_piarb_00018_.png" alt="Third slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
         <p> cet en soi un super outil de génération d'image, avec de nombreux modèles de déssin disponible, et surtout, il est open source avec une communauté à l'appuie. (l'image en arrière plan à été fait avec)</p>
-        <p class="mb-0">Accesoirement, je me sens plutôt en confiance et détendu en cuisine, ma patisserie préferée est le roulée à la pomme, que je fait maison avec une crème patissière à la vanille.
-      </div>
+        </div>
+
     </section>
     <hr class="m-0">
     <section class="resume-section p-3 p-lg-5 d-flex flex-column"  data-aos="fade-left" data-aos-mirror="true" id="experience">
