mise à jour du contenu, TODO : mise en ligne du simulateur de sable et de colonie de fourmis

--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" data-aos="fade-left" data-aos-mirror="true" id="interests">
       <div class="my-auto">
         <h2 class="mb-5 text-primary">Des passions ?</h2>
-        <p>L'informatique, l'intelligence artificiel, je me documente souvent sur le sujet, et j'ai découvert Stable Diffusion, il est courament utilisé avec une interface web pour produire des images.
+        <p>L'informatique, l'intelligence artificiel, je me documente souvent sur le sujet, et j'ai découvert Stable Diffusion. Il est courament utilisé avec une interface web pour produire des images.
         </p>
+        <p>les trois exemples suivants sont produis avec ComfyUI, une interface "nodale" pour produire les images.</p>
         <div id="carousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
@@ -183,7 +184,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <p> cet en soi un super outil de génération d'image, avec de nombreux modèles de déssin disponible, et surtout, il est open source avec une communauté à l'appuie. (l'image en arrière plan à été fait avec)</p>
+        <p> cet en soi un super outil de génération d'image, mais sa force est la communauté derrière cet open source, et des sites comme Civitai.org pour fournir des modèles de diffusion et des sous modèles pour améliorer le comportement et le déssin. (l'image en arrière plan à été fait avec)</p>
         </div>
 
     </section>
@@ -241,6 +242,15 @@
             <h3>Snake en javascript:</h3>
             <canvas id="screen">
             </canvas>
+            <p>pour vous déplacer :</p>
+            <li>
+              <ul>Haut : ↑</ul>
+              <ul>Bas : ↓</ul>
+              <ul>Gauche : ←</ul>
+              <ul>Droite : ➜</ul>
+              <ul>Pause : P</ul>
+              <ul>click sur la fenêtre pour récuperer le "focus" et pouvoir jouer, pareil pour pouvoir reprendre le scrolling de la page.</ul>              
+            </li>
             <?xml version="1.0" encoding="UTF-8" standalone="no"?>
             <!-- Created with Inkscape (http://www.inkscape.org/) -->
             <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
